update dependencies + fix build script