@@ -1,3 +1,5 @@
+import org.sourcegrade.jagr.launcher.env.Transformers
+
 @Suppress("DSL_SCOPE_VIOLATION") // https://youtrack.jetbrains.com/issue/KTIJ-19369
 plugins {
     alias(libs.plugins.algomate)
@@ -32,14 +34,34 @@ application {
 }
 
 jagr {
-    graders["graderPublic"].configureDependencies {
-        implementation(libs.algoutils.tutor)
-        implementation(libs.mockito.inline)
-        implementation(libs.testfx.core)
-        implementation(libs.testfx.junit5)
-        implementation(libs.mockito.junit.jupiter)
-        implementation(libs.junit.pioneer)
-        implementation(libs.jackson.databind)
-        compileOnly(libs.openjfx.monocle)
+    graders {
+        val graderPublic by getting {
+            config.set(
+                org.sourcegrade.jagr.launcher.env.Config(
+                    executor = org.sourcegrade.jagr.launcher.env.Executor(
+                        jvmArgs = listOf(
+                            "-Djava.awt.headless=true",
+                            "-Dtestfx.robot=glass",
+                            "-Dtestfx.headless=true",
+                            "-Dprism.order=sw",
+                            "-Djdk.attach.allowAttachSelf=true"
+                        )
+                    ),
+                    transformers = Transformers(
+                        timeout = Transformers.TimeoutTransformer(enabled = false)
+                    )
+                )
+            )
+            configureDependencies {
+                implementation(libs.algoutils.tutor)
+                implementation(libs.mockito.inline)
+                implementation(libs.testfx.core)
+                implementation(libs.testfx.junit5)
+                implementation(libs.mockito.junit.jupiter)
+                implementation(libs.junit.pioneer)
+                implementation(libs.jackson.databind)
+                compileOnly(libs.openjfx.monocle)
+            }
+        }
     }
 }
